--- a/index.html
+++ b/index.html
@@ -3,117 +3,169 @@
 <head>
   <meta charset="UTF-8">
   <title>Hydration Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #e3f2fd;
-      text-align: center;
-      padding-top: 40px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: linear-gradient(180deg, #e3f2fd, #bbdefb);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin: 0;
+    }
+
+    .app {
+      background: #ffffff;
+      width: 100%;
+      max-width: 380px;
+      border-radius: 24px;
+      padding: 24px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      text-align: center;
     }
 
     h1 {
       color: #1565c0;
+      margin-bottom: 6px;
+    }
+
+    .subtitle {
+      font-size: 14px;
+      color: #607d8b;
+      margin-bottom: 16px;
     }
 
     #streak {
-      font-size: 18px;
-      margin-bottom: 15px;
-      font-weight: bold;
-    }
-
-    #progress-container {
-      width: 80%;
-      height: 30px;
-      background: #bbdefb;
+      background: #fff3e0;
+      color: #ef6c00;
+      padding: 6px 14px;
       border-radius: 20px;
-      margin: 20px auto;
-      overflow: hidden;
+      display: inline-block;
+      font-weight: 600;
+      margin-bottom: 18px;
     }
 
-    #progress-bar {
+    .progress-container {
+      width: 100%;
+      height: 28px;
+      background: #e3f2fd;
+      border-radius: 20px;
+      overflow: hidden;
+      margin-bottom: 10px;
+    }
+
+    .progress-bar {
       height: 100%;
       width: 0%;
-      background: #2196f3;
+      background: linear-gradient(90deg, #42a5f5, #1e88e5);
       transition: width 0.3s ease;
     }
 
+    #status {
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
+    }
+
     button {
-      font-size: 16px;
-      padding: 12px 22px;
       border: none;
-      border-radius: 30px;
+      padding: 12px;
+      border-radius: 16px;
+      font-size: 16px;
+      font-weight: 600;
       background: #1976d2;
       color: white;
       cursor: pointer;
-      margin: 6px;
     }
 
     button.secondary {
-      background: #546e7a;
+      background: #90a4ae;
     }
 
     button.danger {
-      background: #c62828;
+      background: #e53935;
+    }
+
+    .actions {
+      margin-top: 14px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
     }
 
     #points {
-      margin-top: 20px;
-      font-size: 20px;
+      margin-top: 18px;
+      font-size: 18px;
       font-weight: bold;
-    }
-
-    #status {
-      font-size: 16px;
-      margin-top: 10px;
     }
 
     /* WIN SCREEN */
     #win-screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      inset: 0;
       background: rgba(227, 242, 253, 0.95);
       display: none;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
       z-index: 999;
+    }
+
+    #win-card {
+      background: white;
+      padding: 30px;
+      border-radius: 24px;
+      text-align: center;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+    }
+
+    #win-card h2 {
+      color: #1565c0;
+      margin-bottom: 8px;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>💧 Hydration Game</h1>
-  <div id="streak">🔥 Streak: 0 days</div>
-  <p>Log water as you drink</p>
+  <div class="app">
+    <h1>💧 Hydration</h1>
+    <div class="subtitle">Drink water. Win today.</div>
 
-  <div id="progress-container">
-    <div id="progress-bar"></div>
+    <div id="streak">🔥 Streak: 0 days</div>
+
+    <div class="progress-container">
+      <div class="progress-bar" id="progress-bar"></div>
+    </div>
+
+    <div id="status">0 / 2000 ml</div>
+
+    <div class="buttons">
+      <button onclick="drink(250)">🥛 250</button>
+      <button onclick="drink(500)">🧃 500</button>
+      <button onclick="drink(1000)">🍼 1L</button>
+    </div>
+
+    <div class="actions">
+      <button class="secondary" onclick="undoDrink()">↩️ Undo</button>
+      <button class="danger" onclick="resetDay()">🔄 Reset</button>
+    </div>
+
+    <div id="points">Points: 0</div>
   </div>
 
-  <div id="status">0 / 2000 ml</div>
-
-  <div>
-    <button onclick="drink(250)">🥛 250 ml</button>
-    <button onclick="drink(500)">🧃 500 ml</button>
-    <button onclick="drink(1000)">🍼 1 L</button>
-  </div>
-
-  <div>
-    <button class="secondary" onclick="undoDrink()">↩️ Undo</button>
-    <button class="danger" onclick="resetDay()">🔄 Reset</button>
-  </div>
-
-  <div id="points">Points: 0</div>
-
+  <!-- WIN SCREEN -->
   <div id="win-screen">
-    <h2>🏆 YOU WON TODAY!</h2>
-    <p>Hydration goal completed 💧</p>
+    <div id="win-card">
+      <h2>🏆 You Won Today!</h2>
+      <p>Hydration goal completed 💧</p>
+    </div>
   </div>
 
   <script>
@@ -125,7 +177,6 @@
     let points = Number(localStorage.getItem("points")) || 0;
     let streak = Number(localStorage.getItem("streak")) || 0;
     let lastCompleted = localStorage.getItem("lastCompleted");
-
     let history = JSON.parse(localStorage.getItem("history")) || [];
 
     if (savedDate !== today) {
@@ -141,7 +192,6 @@
       if (totalDrank >= goal) return;
 
       history.push(amount);
-
       totalDrank += amount;
       if (totalDrank > goal) totalDrank = goal;
 
@@ -160,7 +210,6 @@
       if (history.length === 0) return;
 
       let last = history.pop();
-
       totalDrank -= last;
       if (totalDrank < 0) totalDrank = 0;
 
@@ -198,14 +247,10 @@
 
     function updateUI() {
       let percent = (totalDrank / goal) * 100;
-
       document.getElementById("progress-bar").style.width = percent + "%";
       document.getElementById("status").innerText =
         totalDrank + " / " + goal + " ml";
-
-      document.getElementById("points").innerText =
-        "Points: " + points;
-
+      document.getElementById("points").innerText = "Points: " + points;
       document.getElementById("streak").innerText =
         "🔥 Streak: " + streak + " days";
     }
@@ -222,7 +267,6 @@
     function celebrate() {
       const winScreen = document.getElementById("win-screen");
       winScreen.style.display = "flex";
-
       setTimeout(() => {
         winScreen.style.display = "none";
       }, 2500);
@@ -231,3 +275,4 @@
 
 </body>
 </html>
+
